set script overflow-y to auto and fix overflow errors in chrome

--- a/Website/Components/Controls/Characters.razor.css
+++ b/Website/Components/Controls/Characters.razor.css
@@ -1,6 +1,6 @@
 .characters {
     height: 100%;
-    overflow: scroll;
+    overflow-y: auto;
 }
 
 .character {
