--- a/Website/Components/Controls/Monsters.razor.css
+++ b/Website/Components/Controls/Monsters.razor.css
@@ -1,6 +1,6 @@
 .monsters {
     height: 100%;
-    overflow: scroll;
+    overflow-y: auto;
 }
 
 .monsters-item {
