--- a/Website/Components/Controls/Script.razor.css
+++ b/Website/Components/Controls/Script.razor.css
@@ -18,20 +18,22 @@
     height: calc(100% - 45px);
 }
 
-.edit-view textarea {
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-    background-color: transparent;
-    border: 1px solid black;
-    border-radius: 5px;
-    color: #ffffff;
-    resize: none;
-    margin: 0 0 5px 0;
-}
+    .edit-view textarea {
+        width: 100%;
+        height: 100%;
+        padding: 10px;
+        background-color: transparent;
+        border: 1px solid black;
+        border-radius: 5px;
+        color: #ffffff;
+        resize: none;
+        margin: 0 0 5px 0;
+    }
 
 .markdown-view {
+    height: 100%;
     position: relative;
+    overflow-y: auto;
 }
 
 .button-text {
